test/conformance/chainsaw/verify-manifests/single-signature/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-yaml
spec:
  background: false 
  rules:
    - name: validate-yaml
      match:
        any:
        - resources:
            kinds:
            - Service
      validate:
        failureAction: Enforce
        manifests:
          attestors:
          - count: 1
            entries:
            - keys:
                publicKeys: |-
                    -----BEGIN PUBLIC KEY-----
                    MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEyQfmL5YwHbn9xrrgG3vgbU0KJxMY
[...]
                    -----END PUBLIC KEY-----
            - keys:
                publicKeys: |-
                    -----BEGIN PUBLIC KEY-----
                    MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEE8uGVnyDWPPlB7M5KOHRzxzPHtAy
[...]
                    -----END PUBLIC KEY-----
  webhookConfiguration:
    timeoutSeconds: 30
    failurePolicy: Fail
