test/conformance/chainsaw/verify-manifests/single-signature/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: single-signature
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: policy.yaml
    - assert:
        file: policy-assert.yaml
  - name: step-02
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: resource-no-signature.yaml
    - apply:
        file: resource-one-signature.yaml
    - apply:
        file: resource-two-signatures.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: resource-bad-signatures.yaml
